--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,25 @@ address{
     margin:0px;
     color:#0f0f0f;
 }
+
+.navbar-inverse {
+    background-color: #512DA8;
+}
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+    height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
